@@ -83,6 +83,10 @@ int hausman_test (MODEL *pmod,
 		  double ***pZ, DATAINFO *pdinfo, 
 		  PRN *prn);
 
+int leverage_test (MODEL *pmod, 
+		   const double **Z, const DATAINFO *pdinfo, 
+		   PRN *prn, PATHS *ppaths);
+
 int mp_ols (const LIST list, const char *pos,
 	    double ***pZ, DATAINFO *pdinfo, 
 	    PRN *prn); 
